# VoxelZombieWebGL

./: .env  .git-blame-ignore-revs  .gitignore  LICENSE.md  README.md  docker-compose.yml  reverse-proxy.conf  start.ps1  test.db
NginxDocker/: docker-compose.yml  traefik-dynamic.yml  traefik.yml
ProxyServer/: .editorconfig  Dockerfile  package-lock.json  package.json  proxyServer.js  testServer.js
VoxelZombie/: .gitignore  VoxelZombie.sln  add_references.ps1  build_library.ps1
VoxelZombie/Server/: IActionState.cs
VoxelZombie/Tests/: Tests.cs  Tests.csproj  UnitTest1.cs
VoxelZombie/ZombieLib/: ActionInputs.cs  ActionStates.cs  Cast.cs  ChunkID.cs  ChunkInfo.cs  Class1.cs  ClientInputs.cs  VoxelEnum.cs  ZombieLib.csproj
VoxelZombieClient/Assets/: IChunk.cs  IWorld.cs  MoveState.cs  NoBounce.physicMaterial
VoxelZombieClient/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
VoxelZombieClient/UserSettings/: EditorUserSettings.asset
VoxelZombieServer/: .gitignore
crashblox/: .dockerignore  .gitignore  Dockerfile  UnityWebRtc.jslib  crashbloxServer.js  localTestServer.js  package-lock.json  package.json  proxyServer.js  server.js  temp.js
discordIdentity/: discordIdentityServer.js  package-lock.json
game_stats/: README.md  main.py  models.py  pyproject.toml
identity/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  startPoetry.ps1
identity/app/: app.py  db.py  models.py  settings.py  users.py
identity/app/oauth_clients/: __init__.py  _discord.py
(+1025 files in other folders)
