[tool.poetry]
name = "game_stats"
version = "0.1.0"
description = ""
authors = ["Snapper Vibes <learningwithsnapper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
